force-app/main/default/objects/sked_Optimization_Queue_Item__c/fields/sked_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive__c</fullName>
    <label>Drive</label>
    <referenceTo>sked_Drive__c</referenceTo>
    <relationshipLabel>Optimization Queue Items</relationshipLabel>
    <relationshipName>sked_Optimization_Queue_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>