force-app/main/default/objects/sked_Optimization_Queue_Item__c/fields/sked_Optimization_Queue__c.field-meta.xml
<CustomField>
    <fullName>sked_Optimization_Queue__c</fullName>
    <label>Optimization Queue</label>
    <referenceTo>sked_Optimization_Queue__c</referenceTo>
    <relationshipLabel>Optimization Queue Items</relationshipLabel>
    <relationshipName>sked_Optimization_Queue_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>