force-app/main/default/objects/sked_Optimization_Queue_Item__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <defaultValue>&quot;Selected&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Reshuffled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>